Replaced HtmlGenerator from Lib to ConsoleApp. Added Tests project (on NUnit).

--- a/UlstuScheduleParser.ConsoleApp/UlstuScheduleParser.ConsoleApp.csproj
+++ b/UlstuScheduleParser.ConsoleApp/UlstuScheduleParser.ConsoleApp.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\UlstuScheduleParser.Lib\UlstuScheduleParser.Lib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Templates\AuditoryScheduleTemplate.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
