--- a/UlstuScheduleParser.Tests/UlstuScheduleParser.Tests.csproj
+++ b/UlstuScheduleParser.Tests/UlstuScheduleParser.Tests.csproj
@@ -12,4 +12,18 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\UlstuScheduleParser.Lib\UlstuScheduleParser.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\schedule20190316.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
