--- a/UlstuScheduleParser.Lib/UlstuScheduleParser.Lib.csproj
+++ b/UlstuScheduleParser.Lib/UlstuScheduleParser.Lib.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Vladislav Moiseev</Authors>
+    <Company>Ulyanovsk State Technical University</Company>
+    <Description>Library for parsing schedule from UlSTU website.
+
+Библиотека для парсинга расписания с веб-сайта УлГТУ.</Description>
+    <PackageProjectUrl>https://github.com/vladdy-moses/UlstuScheduleParser</PackageProjectUrl>
+    <PackageTags>ulstu, ulyanovsk state technical university, parser</PackageTags>
+    <PackageReleaseNotes>Initial version.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
