--- a/UlstuScheduleParser.Lib/UlstuScheduleParser.Lib.csproj
+++ b/UlstuScheduleParser.Lib/UlstuScheduleParser.Lib.csproj
@@ -12,8 +12,16 @@
     <PackageReleaseNotes>Initial version.</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/vladdy-moses/UlstuScheduleParser</RepositoryUrl>
     <NeutralLanguage>ru</NeutralLanguage>
-    <PackageLicenseUrl>https://github.com/vladdy-moses/UlstuScheduleParser/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseUrl></PackageLicenseUrl>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\LICENSE" Link="LICENSE" Pack="true" PackagePath="" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
